--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,71 @@
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;  
 }
 
+.bg-dark {
+  padding-left: 25px;
+}
+
+.form-control {
+  display: block;
+  margin-top: 10px;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-primary {
+  color: #fff;
+  margin-top: 10px;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+
+.badge {
+  background: red;
+  display: inline-block;
+  padding: .35em .65em;
+  font-size: .75em;
+  font-weight: 700;
+  line-height: 1;
+  color: white;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25rem;
+}
+
+.text-white {
+  color: #fff!important;
+  margin: 5px;
+}
+
+.mark, mark {
+  padding: .2em;
+  background-color: white;
+}
+
+#contador {
+  background: lightgrey;
+  padding-left: 10px;
+}
+
+
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
@@ -11,21 +73,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
